--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -15,5 +15,9 @@
       "noImplicitThis": true,
       "watch": true,
       "sourceMap": false,
+      "typeRoots": [
+        ".",
+        "../node_modules"
+      ]
     }
 }
